src/objects/App_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store IDs, numbers (thresholds, percents...) or any value instead of hardcoding them</description>
    <fields>
        <fullName>DK_BBGR_Generic_User__c</fullName>
        <description>Generic User ID for BBGR Network in Denmark</description>
        <inlineHelpText>Generic User ID for BBGR Network in Denmark</inlineHelpText>
        <label>DK BBGR Generic User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_Essilor_Generic_User__c</fullName>
        <description>Generic User ID for Essilor Network in Denmark</description>
        <inlineHelpText>Generic User ID for Essilor Network in Denmark</inlineHelpText>
        <label>DK Essilor Generic User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_X_Network_Generic_User__c</fullName>
        <description>Generic User ID for X-network in Denmark</description>
        <inlineHelpText>Generic User ID for X-network in Denmark</inlineHelpText>
        <label>DK X-Network Generic User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Settings</label>
</CustomObject>